SR-13979: Calendar.nextDate() segmentation fault

- Annotate _CFCalendarEnumerateDates() with a _Nullable pointer used by
  the block to allow better handling of a NULL CFDateRef.